[project]
name = "langgraph-agentic-backend"
version = "0.1.0"
description = "PDF 모드용 LangGraph Agentic API 서버"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "pypdf>=5.0.0",
    "qdrant-client>=1.12.0",
    "langgraph>=0.2.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ingest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
