[project]
name = "langgraph-agentic-backend"
version = "0.1.0"
description = "PDF 모드용 LangGraph Agentic API 서버"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",  # PDF upload Form/File
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "pypdf>=5.0.0",
    "qdrant-client>=1.12.0",
    "langgraph>=0.2.0",
    "openai>=1.50.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0.0",
    # 2차-2 우화 PDF 생성
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "langchain-groq>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "ingest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
